<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <TextView
        android:id="@+id/textView_guess_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/guess_1"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_result_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/result_1"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_guess_1" />

    <TextView
        android:id="@+id/textView_guess_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/guess_2"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_result_1" />

    <TextView
        android:id="@+id/textView_result_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/result_2"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_guess_2" />

    <TextView
        android:id="@+id/textView_guess_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/guess_3"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_result_2" />

    <TextView
        android:id="@+id/textView_result_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/result_3"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_guess_3" />


    <TextView
        android:id="@+id/textView_final"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/result_final"
        android:textSize="30dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/editText"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:hint="@string/my_hint"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"></EditText>

        <Button
            android:id="@+id/guessButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Guess" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>